added event annotations to raw

--- a/MNEPython/ArtefactAnnotation.ipynb
+++ b/MNEPython/ArtefactAnnotation.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -134,19 +134,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_56506/1752485552.py:1: RuntimeWarning: Did not find any events.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_60620/1752485552.py:1: RuntimeWarning: Did not find any events.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
       "\n",
       "The search_str was \"/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/**/meg/sub-01_ses-01*events.tsv\"\n",
       "  raw1 = read_raw_bids(bids_path=bids_path,\n",
-      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_56506/1752485552.py:1: RuntimeWarning: Did not find any channels.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_60620/1752485552.py:1: RuntimeWarning: Did not find any channels.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
       "\n",
       "The search_str was \"/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/**/meg/sub-01_ses-01*channels.tsv\"\n",
       "  raw1 = read_raw_bids(bids_path=bids_path,\n",
-      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_56506/1752485552.py:1: RuntimeWarning: Did not find any meg.json associated with sub-01_ses-01_task-SpAtt_run-01.\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_60620/1752485552.py:1: RuntimeWarning: Did not find any meg.json associated with sub-01_ses-01_task-SpAtt_run-01.\n",
       "\n",
       "The search_str was \"/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/**/meg/sub-01_ses-01*meg.json\"\n",
       "  raw1 = read_raw_bids(bids_path=bids_path,\n",
-      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_56506/1752485552.py:1: RuntimeWarning: participants.tsv file not found for /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_raw_sss.fif\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_60620/1752485552.py:1: RuntimeWarning: participants.tsv file not found for /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_raw_sss.fif\n",
       "  raw1 = read_raw_bids(bids_path=bids_path,\n"
      ]
     }
@@ -266,7 +266,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.7s\n",
-      "[Parallel(n_jobs=1)]: Done  71 tasks      | elapsed:    2.9s\n"
+      "[Parallel(n_jobs=1)]: Done  71 tasks      | elapsed:    3.0s\n"
      ]
     },
     {
@@ -350,7 +350,10 @@
    "source": [
     "## Include annotations in dataset and inspect\n",
     "\n",
-    "Now mark all the annotations in the data set: "
+    "Now mark all the annotations in the data set.\n",
+    "\n",
+    "\n",
+    "*Calling set_annotations() replaces any annotations currently stored in the Raw object. To prevent that, we first extract their annotations and then combine them together with the blink and muscle annotations*."
    ]
   },
   {
@@ -362,8 +365,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_56506/3587293772.py:1: RuntimeWarning: Limited 1 annotation(s) that were expanding outside the data range.\n",
-      "  raw1.set_annotations(annotations_blink+annotations_muscle)\n"
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_60620/3937126658.py:2: RuntimeWarning: Limited 1 annotation(s) that were expanding outside the data range.\n",
+      "  raw1.set_annotations(annotations_event + annotations_blink + annotations_muscle)\n"
      ]
     },
     {
@@ -466,7 +469,8 @@
     }
    ],
    "source": [
-    "raw1.set_annotations(annotations_blink + annotations_muscle)"
+    "annotations_event = raw1.annotations \n",
+    "raw1.set_annotations(annotations_event + annotations_blink + annotations_muscle)"
    ]
   },
   {
@@ -490,6 +494,16 @@
       "Using qt as 2D backend.\n",
       "Using pyopengl with version 3.1.6\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x14ca15a20>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     },
     {
      "name": "stdout",
@@ -522,9 +536,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_56506/255727686.py:2: RuntimeWarning: The unit for channel(s) EOG001 has changed from NA to V.\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_60620/255727686.py:2: RuntimeWarning: The unit for channel(s) EOG001 has changed from NA to V.\n",
       "  raw1.set_channel_types({'EOG001': 'eog'})\n",
-      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_56506/255727686.py:3: RuntimeWarning: The unit for channel(s) EOG002 has changed from NA to V.\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_60620/255727686.py:3: RuntimeWarning: The unit for channel(s) EOG002 has changed from NA to V.\n",
       "  raw1.set_channel_types({'EOG002': 'eog'})\n"
      ]
     },
@@ -538,7 +552,7 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x4172ef130>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x41d52bf40>"
       ]
      },
      "execution_count": 10,
@@ -586,11 +600,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting existing file.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -602,8 +623,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_56506/3060855422.py:1: RuntimeWarning: This filename (/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ann.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
-      "  raw1.save(ann_fname_fif_1, overwrite=True)\n"
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_60620/3888226814.py:1: RuntimeWarning: This filename (/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ann.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "  raw1.save(deriv_fname_fif_1, overwrite=True)\n"
      ]
     },
     {
@@ -611,7 +632,8 @@
      "output_type": "stream",
      "text": [
       "Closing /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ann.fif\n",
-      "[done]\n"
+      "[done]\n",
+      "Overwriting existing file.\n"
      ]
     }
    ],
@@ -631,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -644,26 +666,27 @@
       "Ready.\n",
       "Reading 0 ... 1433999  =      0.000 ...  1433.999 secs...\n",
       "Using EOG channel: EOG001\n",
-      "EOG channel index for this subject is: [0]\n"
+      "EOG channel index for this subject is: [0]\n",
+      "Filtering the data to remove DC offset to help distinguish blinks from saccades\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_56506/1312324574.py:4: RuntimeWarning: Did not find any events.tsv associated with sub-01_ses-01_task-SpAtt_run-02.\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_60620/4072543864.py:4: RuntimeWarning: Did not find any events.tsv associated with sub-01_ses-01_task-SpAtt_run-02.\n",
       "\n",
       "The search_str was \"/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/**/meg/sub-01_ses-01*events.tsv\"\n",
       "  raw2 = read_raw_bids(bids_path=bids_path,\n",
-      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_56506/1312324574.py:4: RuntimeWarning: Did not find any channels.tsv associated with sub-01_ses-01_task-SpAtt_run-02.\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_60620/4072543864.py:4: RuntimeWarning: Did not find any channels.tsv associated with sub-01_ses-01_task-SpAtt_run-02.\n",
       "\n",
       "The search_str was \"/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/**/meg/sub-01_ses-01*channels.tsv\"\n",
       "  raw2 = read_raw_bids(bids_path=bids_path,\n",
-      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_56506/1312324574.py:4: RuntimeWarning: Did not find any meg.json associated with sub-01_ses-01_task-SpAtt_run-02.\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_60620/4072543864.py:4: RuntimeWarning: Did not find any meg.json associated with sub-01_ses-01_task-SpAtt_run-02.\n",
       "\n",
       "The search_str was \"/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/**/meg/sub-01_ses-01*meg.json\"\n",
       "  raw2 = read_raw_bids(bids_path=bids_path,\n",
-      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_56506/1312324574.py:4: RuntimeWarning: participants.tsv file not found for /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_raw_sss.fif\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_60620/4072543864.py:4: RuntimeWarning: participants.tsv file not found for /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_raw_sss.fif\n",
       "  raw2 = read_raw_bids(bids_path=bids_path,\n"
      ]
     },
@@ -671,7 +694,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filtering the data to remove DC offset to help distinguish blinks from saccades\n",
       "Selecting channel EOG001 for blink detection\n",
       "Setting up band-pass filter from 1 - 10 Hz\n",
       "\n",
@@ -710,7 +732,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.7s\n",
-      "[Parallel(n_jobs=1)]: Done  71 tasks      | elapsed:    3.0s\n"
+      "[Parallel(n_jobs=1)]: Done  71 tasks      | elapsed:    2.9s\n"
      ]
     },
     {
@@ -728,6 +750,7 @@
       "- Upper transition bandwidth: 2.00 Hz (-6 dB cutoff frequency: 5.00 Hz)\n",
       "- Filter length: 1651 samples (1.651 s)\n",
       "\n",
+      "Overwriting existing file.\n",
       "Writing /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_ann.fif\n"
      ]
     },
@@ -735,10 +758,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_56506/1312324574.py:25: RuntimeWarning: Omitted 487 annotation(s) that were outside data range.\n",
-      "  raw2.set_annotations(annotations_blink + annotations_muscle)\n",
-      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_56506/1312324574.py:28: RuntimeWarning: This filename (/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_ann.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
-      "  raw2.save(ann_fname_fif_2, overwrite=True)\n"
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_60620/4072543864.py:25: RuntimeWarning: Omitted 487 annotation(s) that were outside data range.\n",
+      "  raw2.set_annotations(raw2.annotations + annotations_blink + annotations_muscle)\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_60620/4072543864.py:28: RuntimeWarning: This filename (/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_ann.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "  raw2.save(deriv_fname_fif_2, overwrite=True)\n"
      ]
     },
     {
@@ -746,7 +769,8 @@
      "output_type": "stream",
      "text": [
       "Closing /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_ann.fif\n",
-      "[done]\n"
+      "[done]\n",
+      "Overwriting existing file.\n"
      ]
     }
    ],
@@ -775,7 +799,7 @@
     "    filter_freq=[110, 140])\n",
     "\n",
     "# Annotate the data files\n",
-    "raw2.set_annotations(annotations_blink + annotations_muscle)\n",
+    "raw2.set_annotations(raw2.annotations + annotations_blink + annotations_muscle)\n",
     "\n",
     "# Save \n",
     "raw2.save(deriv_fname_fif_2, overwrite=True)\n",
