--- a/MNEPython/ICA.ipynb
+++ b/MNEPython/ICA.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -174,10 +174,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.2s\n",
-      "[Parallel(n_jobs=1)]: Done  71 tasks      | elapsed:    0.5s\n",
-      "[Parallel(n_jobs=1)]: Done 161 tasks      | elapsed:    0.9s\n",
-      "[Parallel(n_jobs=1)]: Done 287 tasks      | elapsed:    1.5s\n"
+      "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.1s\n",
+      "[Parallel(n_jobs=1)]: Done  71 tasks      | elapsed:    0.2s\n",
+      "[Parallel(n_jobs=1)]: Done 161 tasks      | elapsed:    0.5s\n"
      ]
     },
     {
@@ -191,6 +190,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "[Parallel(n_jobs=1)]: Done 287 tasks      | elapsed:    0.8s\n",
       "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_57986/3233175073.py:2: RuntimeWarning: This filename (/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_ann.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
       "  raw = read_raw_bids(bids_path=bids_path,\n"
      ]
@@ -248,10 +248,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.2s\n",
-      "[Parallel(n_jobs=1)]: Done  71 tasks      | elapsed:    0.6s\n",
-      "[Parallel(n_jobs=1)]: Done 161 tasks      | elapsed:    1.1s\n",
-      "[Parallel(n_jobs=1)]: Done 287 tasks      | elapsed:    1.9s\n"
+      "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.0s\n",
+      "[Parallel(n_jobs=1)]: Done  71 tasks      | elapsed:    0.2s\n",
+      "[Parallel(n_jobs=1)]: Done 161 tasks      | elapsed:    0.5s\n",
+      "[Parallel(n_jobs=1)]: Done 287 tasks      | elapsed:    0.8s\n"
      ]
     }
    ],
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
       "Fitting ICA to data using 306 channels (please be patient, this may take a while)\n",
       "Omitting 19832 of 578200 (3.43%) samples, retaining 558368 (96.57%) samples.\n",
       "Selecting by number: 30 components\n",
-      "Fitting ICA took 23.3s.\n"
+      "Fitting ICA took 15.7s.\n"
      ]
     },
     {
@@ -334,7 +334,7 @@
        "<ICA | raw data decomposition, method: fastica (fit in 48 iterations on 558368 samples), 30 ICA components (306 PCA components available), channel types: mag, grad, no sources marked for exclusion>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -373,12 +373,20 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "qt.qpa.openglcontext: Could not find virtual screen for QCocoaScreen(0x1783d0af0, \"\", QRect(0,0 1920x1080), dpr=1, displayId=10, <NSScreen: 0x33bdbf8a0>) with displayId 10\n",
+      "qt.qpa.openglcontext: Could not find virtual screen for QCocoaScreen(0x1783d0af0, \"\", QRect(0,0 1920x1080), dpr=1, displayId=10, <NSScreen: 0x33bdbf8a0>) with displayId 10\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x178412290>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x109577400>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
