ran ica with correct annotations

--- a/MNEPython/Conditions.ipynb
+++ b/MNEPython/Conditions.ipynb
@@ -168,7 +168,7 @@
     "# This section only runs on run=01 for illustration purposes\n",
     "bids_path_preproc.update(run='01')\n",
     "raw = read_raw_bids(bids_path=bids_path_preproc, \n",
-    "            extra_params={'preload':True},\n",
+    "            extra_params={'preload':False},\n",
     "            verbose=True)\n",
     "               \n"
    ]
