unti line 6 in conditions

--- a/MNEPython/Conditions.ipynb
+++ b/MNEPython/Conditions.ipynb
@@ -15,9 +15,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_64707/2713253147.py:4: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import os.path as op\n",
     "import os\n",
@@ -58,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -128,38 +143,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening raw data file /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ica.fif...\n",
-      "    Range : 1665000 ... 3098999 =   1665.000 ...  3098.999 secs\n",
-      "Ready.\n",
-      "Reading 0 ... 1433999  =      0.000 ...  1433.999 secs...\n"
+      "Opening raw data file /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ica.fif...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_59345/4127190121.py:3: RuntimeWarning: This filename (/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ica.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
-      "  raw = read_raw_bids(bids_path=bids_path_preproc,\n",
-      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_59345/4127190121.py:3: RuntimeWarning: Did not find any events.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_64707/3513502553.py:3: RuntimeWarning: This filename (/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ica.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "  raw = read_raw_bids(bids_path=bids_path_preproc,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Range : 1665000 ... 3098999 =   1665.000 ...  3098.999 secs\n",
+      "Ready.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_64707/3513502553.py:3: RuntimeWarning: Did not find any events.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
       "\n",
       "The search_str was \"/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/**/meg/sub-01_ses-01*events.tsv\"\n",
       "  raw = read_raw_bids(bids_path=bids_path_preproc,\n",
-      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_59345/4127190121.py:3: RuntimeWarning: Did not find any channels.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_64707/3513502553.py:3: RuntimeWarning: Did not find any channels.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
       "\n",
       "The search_str was \"/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/**/meg/sub-01_ses-01*channels.tsv\"\n",
       "  raw = read_raw_bids(bids_path=bids_path_preproc,\n",
-      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_59345/4127190121.py:3: RuntimeWarning: Did not find any meg.json associated with sub-01_ses-01_task-SpAtt_run-01.\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_64707/3513502553.py:3: RuntimeWarning: Did not find any meg.json associated with sub-01_ses-01_task-SpAtt_run-01.\n",
       "\n",
       "The search_str was \"/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/**/meg/sub-01_ses-01*meg.json\"\n",
       "  raw = read_raw_bids(bids_path=bids_path_preproc,\n",
-      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_59345/4127190121.py:3: RuntimeWarning: participants.tsv file not found for /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ica.fif\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_64707/3513502553.py:3: RuntimeWarning: participants.tsv file not found for /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ica.fif\n",
       "  raw = read_raw_bids(bids_path=bids_path_preproc,\n"
      ]
     }
@@ -175,21 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Could not find any of the events you specified.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Reading the events from the raw file\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m events, events_id \u001b[38;5;241m=\u001b[39m \u001b[43mmne\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mevents_from_annotations\u001b[49m\u001b[43m(\u001b[49m\u001b[43mraw\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mevent_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mauto\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m<decorator-gen-39>:12\u001b[0m, in \u001b[0;36mevents_from_annotations\u001b[0;34m(raw, event_id, regexp, use_rounding, chunk_duration, verbose)\u001b[0m\n",
-      "File \u001b[0;32m~/miniconda3/envs/mne/lib/python3.11/site-packages/mne/annotations.py:1596\u001b[0m, in \u001b[0;36mevents_from_annotations\u001b[0;34m(raw, event_id, regexp, use_rounding, chunk_duration, verbose)\u001b[0m\n\u001b[1;32m   1592\u001b[0m annotations \u001b[38;5;241m=\u001b[39m raw\u001b[38;5;241m.\u001b[39mannotations\n\u001b[1;32m   1594\u001b[0m event_id \u001b[38;5;241m=\u001b[39m _check_event_id(event_id, raw)\n\u001b[0;32m-> 1596\u001b[0m event_sel, event_id_ \u001b[38;5;241m=\u001b[39m \u001b[43m_select_annotations_based_on_description\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1597\u001b[0m \u001b[43m    \u001b[49m\u001b[43mannotations\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdescription\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mevent_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mevent_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mregexp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mregexp\u001b[49m\n\u001b[1;32m   1598\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1600\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m chunk_duration \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   1601\u001b[0m     inds \u001b[38;5;241m=\u001b[39m raw\u001b[38;5;241m.\u001b[39mtime_as_index(\n\u001b[1;32m   1602\u001b[0m         annotations\u001b[38;5;241m.\u001b[39monset, use_rounding\u001b[38;5;241m=\u001b[39muse_rounding, origin\u001b[38;5;241m=\u001b[39mannotations\u001b[38;5;241m.\u001b[39morig_time\n\u001b[1;32m   1603\u001b[0m     )\n",
-      "File \u001b[0;32m~/miniconda3/envs/mne/lib/python3.11/site-packages/mne/annotations.py:1440\u001b[0m, in \u001b[0;36m_select_annotations_based_on_description\u001b[0;34m(descriptions, event_id, regexp)\u001b[0m\n\u001b[1;32m   1437\u001b[0m event_sel \u001b[38;5;241m=\u001b[39m [ii \u001b[38;5;28;01mfor\u001b[39;00m ii, kk \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(descriptions) \u001b[38;5;28;01mif\u001b[39;00m kk \u001b[38;5;129;01min\u001b[39;00m event_id_]\n\u001b[1;32m   1439\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(event_sel) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m regexp \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m-> 1440\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not find any of the events you specified.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   1442\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m event_sel, event_id_\n",
-      "\u001b[0;31mValueError\u001b[0m: Could not find any of the events you specified."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Used Annotations descriptions: ['ITI', 'block_start', 'cue_left', 'cue_right', 'left_resp_maybe', 'right_resp_maybe', 'target_onset', 'trial_end', 'trial_start']\n"
      ]
     }
    ],
@@ -207,14 +226,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Annotations | 554 segments: BAD_muscle (67), blink (487)>\n"
+      "<Annotations | 1335 segments: BAD_muscle (98), ITI (140), blink (543), ...>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_64707/558297772.py:3: RuntimeWarning: Omitted 1335 annotation(s) that were outside data range.\n",
+      "  raw.set_annotations(ann1)\n"
      ]
     },
     {
@@ -311,7 +338,7 @@
        "<Raw | sub-01_ses-01_task-SpAtt_run-01_ica.fif, 343 x 1434000 (1434.0 s), ~557 kB, data not loaded>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
