--- a/MNEPython/ICA.ipynb
+++ b/MNEPython/ICA.ipynb
@@ -668,6 +668,8 @@
      "output_type": "stream",
      "text": [
       "Channels marked as bad:\n",
+      "none\n",
+      "Channels marked as bad:\n",
       "none\n"
      ]
     }
