read through TFR

--- a/MNEPython/TFRofPower.ipynb
+++ b/MNEPython/TFRofPower.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "## Preparation\n",
     "\n",
-    "Important the relevant Python modules:"
+    "Import the relevant Python modules:"
    ]
   },
   {
@@ -42,16 +42,7 @@
     "import time\n",
     "\n",
     "import mne\n",
-    "from mne_bids import BIDSPath, read_raw_bids # If you don't have mne_bids installed, comment this line.\n",
-    "#num_cpu = '1' # Set as a string\n",
-    "#os.environ['OMP_NUM_THREADS'] = num_cpu"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Set the paths for the data and results. Note that these will depend on your local setup."
+    "from mne_bids import BIDSPath, read_raw_bids # If you don't have mne_bids installed, comment this line."
    ]
   },
   {
@@ -63,6 +54,13 @@
     "~~~\n",
     "<BIDS_ROOT>/derivatives/Analysis/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-12_epo.fif\n",
     "~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the paths for the data and results. Note that these will depend on your local setup."
    ]
   },
   {
@@ -141,7 +139,7 @@
    },
    "source": [
     "## Time-frequency analysis of slower frequencies (<30 hz)\n",
-    "From experience we know that oscillations in slower frequency bands such as in the theta, alpha and beta range are fairly narrow-band (ΔF ~ 2 Hz) whereas neuronal activity in the gamma band (60 - 90 hz) is typically more broad-band (ΔF ~ 5-10 hz). For this reason we advise the use different settings for slower and faster frequencies.\n",
+    "From experience we know that oscillations in slower frequency bands such as in the theta, alpha and beta range are fairly narrow-band (ΔF ~ 2 Hz) whereas neuronal activity in the gamma band (60 - 90 hz) is typically more broad-band (ΔF ~ 5-10 hz). For this reason we advise to use different settings for slower and faster frequencies.\n",
     "\n",
     "We will be making use of the multi-taper technique. It is implemented as a sliding-time window approach where the Fourier transform is used to estimate the spectral power. In the MNE-Python implementation, the Fourier transform is based on a convolution-type approach. For the sliding window, data are 'tapered', i.e. one or more orthogonal tapers are multiplied to the data in the time-window prior to the Fourier-transform (Percival and Walden, 1993). These tapers are derived from discrete prolate spheroidal sequences (DPSS).\n",
     "\n",
@@ -215,9 +213,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that *n_jobs = -1* allow for parallel execution which is more efficient if you have a multicore CPU. \n",
+    "Note that `n_jobs = -1` allow for parallel execution which is more efficient if you have a multicore CPU. \n",
     "\n",
-    "Use the *plot* function to show the response from a posterior sensor in the interval -0.5 to 1 s with respect to the onset of the gratings."
+    "Use the `plot` function to show the response from a posterior sensor in the interval -0.5 to 1 s with respect to the onset of the gratings."
    ]
   },
   {
@@ -258,7 +256,7 @@
    "metadata": {},
    "source": [
     "Note the presence of the 10-12 Hz alpha band activty in the interval prior to the onset of the gratings. Also note the power increase at ~0.2 s at 1-5 Hz which likely reflects contributions from the event-relalted field. \n",
-    "To better observe these effect, one can apply a relative baseline. We have chosen *mode=\"percent\"* as this will \n",
+    "To better observe these effect, one can apply a relative baseline. We have chosen `mode=\"percent\"` as this will \n",
     "perform a normalization with respect to the power in the baseline:\n",
     "\n",
     "$$ P_{relative}(t,f) = {Power(t,f) - Power_{baseline}(f) \\over Power_{baseline}(f)} $$\n",
@@ -358,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To show a topographic map of the alpha depression in the time interval from 300 to 1000 ms use the *plot_topomap* command"
+    "To show a topographic map of the alpha depression in the time interval from 300 to 1000 ms use the `plot_topomap` command"
    ]
   },
   {
@@ -478,7 +476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To illustrate the lateralization index for the 10-12 Hz alpha band use the *plot_topomap* function:"
+    "To illustrate the lateralization index for the 10-12 Hz alpha band use the `plot_topomap` function:"
    ]
   },
   {
@@ -518,7 +516,7 @@
     "\n",
     "* *freqs*: defines the frequency range over which to perform the analysis. We will consider 30 to 100 Hz in steps of 2 Hz.\n",
     "* *n_cycles*: we set the number of cycles qual to freqs / 4. This results in a time-window dT = 250 ms which is independent of frequency. The relatively short time-window insures good temporal resolution.\n",
-    "* *time_bandwidth* Set the time_bandwith to 4 s. This result in N = 3 tapers. As N < 2 * dT * dF, the resulting spectral smoothing is at least 6 Hz. The relatively large spectral smoothing stems for the empirical observation that visual gamma is somewhat broad-band.\n",
+    "* *time_bandwidth* Set the time_bandwith to 4 s. This result in N = 3 tapers. As N < 2 * dT * dF, the resulting spectral smoothing is at least 6 Hz. The relatively large spectral smoothing stems from the empirical observation that visual gamma is somewhat broad-band.\n",
     "\n",
     "For details on the multitaper approach see see Percival and Walden (1993). \n",
     "\n",
@@ -634,7 +632,7 @@
    "source": [
     "Note the increase in 80-90 Hz gamma power in response to the onset (t = 0 s) of the gratings.\n",
     "\n",
-    "To show the TFRs for all sensors write "
+    "To show the TFRs for all sensors write:"
    ]
   },
   {
@@ -661,7 +659,7 @@
     }
    ],
    "source": [
-    "tfr_f_left.plot_topo(\n",
+    "tfr_fast_left.plot_topo(\n",
     "    tmin=-0.5, tmax=1.0, \n",
     "    baseline = [-0.5,-0.125], \n",
     "    mode=\"percent\", \n",
