read through headmodel

--- a/MNEPython/headmodel.ipynb
+++ b/MNEPython/headmodel.ipynb
@@ -205,11 +205,11 @@
     "\n",
     "![surface.PNG](attachment:surface.PNG)\n",
     "\n",
-    "Above shows the parcellated brain surface. We are not going use the parcellation here; however, its wise to use the output to check that the brain surface has been correctly reconstructed. \n",
+    "Above shows the parcellated brain surface. We are not going to use the parcellation here; however, it is wise to use the output to check that the brain surface has been correctly reconstructed. \n",
     "\n",
     "## Creating the boundary element model (BEM) surfaces\n",
     "\n",
-    "Now that the surface of the MRI has been recontructed the boundary element model (BEM) can be created. As this will be used for MEG source reconstruction, we will prepare a single shell model by setting *conductivity = (0.3,)* . The *ico* parameter serves to downsample the model and it can be increased to reduce the computational demands. "
+    "Now that the surface of the MRI has been recontructed the boundary element model (BEM) can be created. As this will be used for MEG source reconstruction, we will prepare a single shell model by setting `conductivity = (0.3,)` . The `ico` parameter serves to downsample the model and it can be increased to reduce the computational demands. "
    ]
   },
   {
@@ -252,7 +252,7 @@
    "id": "d9db0e3d",
    "metadata": {},
    "source": [
-    "Now save the BEM model"
+    "Now save the BEM model:"
    ]
   },
   {
@@ -271,7 +271,7 @@
    "id": "f98ee729",
    "metadata": {},
    "source": [
-    "and visualize"
+    "and visualize:"
    ]
   },
   {
@@ -327,7 +327,7 @@
     "\n",
     "## Co-registration with anatomical landmars \n",
     "\n",
-    "The next step involves the spatial alignment of MEG sensor space in relation to digitized scalp landmarks,the HPI coils and the MRI volumes. This alignment is used when deriving the forward solution. It requires working with the MNE-Python-coregistration GUI software. Further support and explanations can be found here watching this video\n",
+    "The next step involves the spatial alignment of MEG sensor space in relation to digitized scalp landmarks,the HPI coils and the MRI volumes. This alignment is used when deriving the forward solution. It requires working with the MNE-Python-coregistration GUI software. Further support and explanations can be found in this video:\n",
     "https://youtu.be/ALV5qqMHLlQ .\n",
     "The output of the manual coregistration is the transformation file we will be using later in the script.\n",
     "\n",
@@ -357,7 +357,7 @@
    "id": "48e8535f-5b3a-4d20-9dd5-b6a739b06f49",
    "metadata": {},
    "source": [
-    "For the raw fiff-file with digitized data use <raw_path>"
+    "For the raw fiff-file with digitized data use <raw_path>:"
    ]
   },
   {
@@ -540,7 +540,7 @@
    "id": "88360698",
    "metadata": {},
    "source": [
-    "Here its important to check that the fiducial points by the nasium and the preauriculars are well placed. \n",
+    "Here it is important to check that the fiducial points by the nasium and the preauriculars are well placed. \n",
     "\n",
     "## Computing the sources according to the BEM model\n",
     "\n",
